LEDGE-157: call Runtime.exec(String[]) method that does not tokenize it's arguments. This way spaces in the command pathname will be preserved.